2025-02-14T12:41:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13329407742 # 820
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-14
* notice: last 14d: unq all: 10 24
* notice: prev accum: outdated-unq outdated-all / unq all: 966 5028 / 974 5050
* notice: next accum: outdated-unq outdated-all / unq all: 966 5028 / 976 5052
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -1 -1 / 2 2
* notice: removed / changed dates: [] / [2025-02-11]

2025-02-14T01:42:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13320734979 # 819
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-14
* notice: last 14d: unq all: 8 22
* notice: prev accum: outdated-unq outdated-all / unq all: 966 5028 / 976 5052
* notice: next accum: outdated-unq outdated-all / unq all: 966 5028 / 974 5050
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [] / [2025-02-11]

2025-02-13T12:42:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13307935311 # 818
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-13
* notice: last 14d: unq all: 10 24
* notice: prev accum: outdated-unq outdated-all / unq all: 965 5022 / 974 5050
* notice: next accum: outdated-unq outdated-all / unq all: 966 5028 / 976 5052
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-01-30] / [2025-02-11 2025-02-12]

2025-02-13T01:42:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13298608247 # 817