@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-14T12:41:17Z",
-  "count_outdated" : 5028,
-  "uniques_outdated" : 966,
-  "count" : 5052,
-  "uniques" : 976,
+  "timestamp" : "2025-02-15T01:41:23Z",
+  "count_outdated" : 5029,
+  "uniques_outdated" : 967,
+  "count" : 5055,
+  "uniques" : 978,
   "views" : [
-    {
-      "timestamp": "2025-01-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-04T00:00:00Z",
       "count": 1,
@@ -76,6 +67,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
