@@ -1,12 +1,7 @@
 {
-  "count": 24,
-  "uniques": 10,
+  "count": 26,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2025-01-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-04T00:00:00Z",
       "count": 1,
@@ -41,6 +36,11 @@
       "timestamp": "2025-02-12T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-14T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
